Linked Scene not appearing in Add->Scene Menu in Video Sequence Editor #63494

Closed
opened 2019-04-11 15:24:41 +02:00 by Enzio Probst · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70

Blender Version
Broken: version: 2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: 009dbc2bc9
Worked: (optional)

Short description of error
When linking in a Scene from another blend file, it doesn't appear in the Add->Scene Menu in the Video Sequence Editor.
Local Scenes do appear.
Through Python one can also add linked Scene as a VSE strip, so it seems to be only a displaying issue when constructing the list for the menu.

Exact steps for others to reproduce the error

  • open blender
  • rename scene to "my_scene"
  • save file as my_file.blend
  • open new session or blender instance
  • File->Link->./my_file.blend/Scenes/my_scene
  • go to Video Sequnce Editor
  • Add->Scene
    the menu won't show linked scene "my_scene"

no file attached as it is extremely simple to reproduce

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70 **Blender Version** Broken: version: 2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: `009dbc2bc9` Worked: (optional) **Short description of error** When linking in a Scene from another blend file, it doesn't appear in the Add->Scene Menu in the Video Sequence Editor. Local Scenes do appear. Through Python one can also add linked Scene as a VSE strip, so it seems to be only a displaying issue when constructing the list for the menu. **Exact steps for others to reproduce the error** - open blender - rename scene to "my_scene" - save file as my_file.blend - open new session or blender instance - File->Link->./my_file.blend/Scenes/my_scene - go to Video Sequnce Editor - Add->Scene the menu won't show linked scene "my_scene" no file attached as it is extremely simple to reproduce
Author

Added subscriber: @EnzioProbst

Added subscriber: @EnzioProbst
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-04-11 15:49:11 +02:00
Member

Confirmed, will check...

Confirmed, will check...

This issue was referenced by 10c4bde792

This issue was referenced by 10c4bde79272add4ae4a26c18ee1013032d277a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63494
No description provided.