Fix T63494: linked scenes missing from sequencer Add > Scene menu

Differential Revision: https://developer.blender.org/D4674